# LMS_proj_django

./: .gitignore  pyproject.toml
project_tracker/project_tracker/: settings.py  urls.py
project_tracker/quality_control/: admin.py  forms.py  models.py  urls.py  views.py
project_tracker/quality_control/migrations/: 0001_theme_14_dz.py
project_tracker/quality_control/templates/quality_control/: bug_detail.html  bug_list.html  bug_report_form.html  bug_update.html  feature_detail.html  feature_list.html  feature_request_form.html  feature_update.html  index.html
project_tracker/tasks/: admin.py  forms.py  models.py  urls.py  views.py
project_tracker/tasks/migrations/: 0001_theme_14.py
project_tracker/tasks/templates/tasks/: index.html  project_detail.html  projects_list.html
project_tracker/templates/base/: base.html
